# Stereolizer

./: .gitignore  CMakeLists.txt  README.md  win.sh
src/: colors.cpp  main.cpp  presets.cpp  util.cpp
